--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -692,8 +692,8 @@ jobs:
           echo "::notice ::设置openwrt发布号为R${{ needs.planning.outputs.starttime }}"
           sed -i "8s/R20240101/R${{ needs.planning.outputs.starttime }}/" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
           echo "::notice ::设置openwrt固件版本为OpenWrt R${{ needs.planning.outputs.starttime }}"
-          sed -i "8s/Zoulianghe/$hostname/" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
-          
+          sed -i "8s/Zoulianghe/${hostname}/g" $OPENWRT_ROOT_PATH/files/etc/uci-defaults/zzz-zoulianghe
+          echo "::notice ::设置openwrt作者为${hostname}"
       - name: 检查剩余空间
         run: |
           echo "======================="
